--- a/11thLauncher/Resources/Strings.es-ES.resx
+++ b/11thLauncher/Resources/Strings.es-ES.resx
@@ -591,4 +591,7 @@
   <data name="S_BTN_TOGGLE_ADDON" xml:space="preserve">
     <value>Cambiar estado</value>
   </data>
+  <data name="S_BTN_ADDON_LINK" xml:space="preserve">
+    <value>Abrir página web del addon</value>
+  </data>
 </root>
