--- a/11thLauncher/Resources/Strings.es-ES.resx
+++ b/11thLauncher/Resources/Strings.es-ES.resx
@@ -562,7 +562,7 @@
     <value>Ruta incorrecta</value>
   </data>
   <data name="S_MSG_INCORRECT_PATH_CONTENT" xml:space="preserve">
-    <value>La carpeta seleccionada no contiene una instalación válida de Arma 3.</value>
+    <value>La carpeta seleccionada no contiene una instalación válida de Arma 3</value>
   </data>
   <data name="S_LABEL_JAVA_DETECTED" xml:space="preserve">
     <value>Detectado</value>
@@ -583,7 +583,7 @@
     <value>Ruta incorrecta</value>
   </data>
   <data name="S_MSG_INCORRECT_JAVA_PATH_CONTENT" xml:space="preserve">
-    <value>La carpeta seleccionada no contiene un entorno de ejecución de Java (JRE) válido.</value>
+    <value>La carpeta seleccionada no contiene un entorno de ejecución de Java (JRE) válido</value>
   </data>
   <data name="S_BTN_BROWSE_ADDON" xml:space="preserve">
     <value>Explorar carpeta</value>
@@ -623,5 +623,14 @@
   </data>
   <data name="S_ACTION_CHECK_REPOSITORY_STATUS" xml:space="preserve">
     <value>Comprobando estado de repositorio</value>
+  </data>
+  <data name="S_BROWSE_ARMA3SYNC_FOLDER" xml:space="preserve">
+    <value>Carpeta de instalación de Arma3Sync</value>
+  </data>
+  <data name="S_MSG_INCORRECT_ARMA3SYNC_PATH_TITLE" xml:space="preserve">
+    <value>Incorrect path</value>
+  </data>
+  <data name="S_MSG_INCORRECT_ARMA3SYNC_PATH_CONTENT" xml:space="preserve">
+    <value>La carpeta seleccionada no contiene una instalación válida de Arma3Sync</value>
   </data>
 </root>
