--- a/11thLauncher/Resources/Strings.resx
+++ b/11thLauncher/Resources/Strings.resx
@@ -610,4 +610,28 @@
   <data name="S_MSG_INCORRECT_ARMA3SYNC_PATH_CONTENT" xml:space="preserve">
     <value>The selected folder does not contain a valid Arma3Sync installation</value>
   </data>
+  <data name="S_PARAMETER_MAX_MEMORY" xml:space="preserve">
+    <value>RAM memory limit</value>
+  </data>
+  <data name="S_PARAMETER_MAX_MEMORY_DESC" xml:space="preserve">
+    <value>Amount of RAM memory available</value>
+  </data>
+  <data name="S_PARAMETER_MAX_VMEMORY" xml:space="preserve">
+    <value>Video memory limit</value>
+  </data>
+  <data name="S_PARAMETER_MAX_VMEMORY_DESC" xml:space="preserve">
+    <value>Amount of video memory available</value>
+  </data>
+  <data name="S_PARAMETER_CPU_COUNT" xml:space="preserve">
+    <value>CPU Count</value>
+  </data>
+  <data name="S_PARAMETER_CPU_COUNT_DESC" xml:space="preserve">
+    <value>Number of CPU cores to use (equal or less than the number of processor cores)</value>
+  </data>
+  <data name="S_PARAMETER_EXTHREADS" xml:space="preserve">
+    <value>Extra threads</value>
+  </data>
+  <data name="S_PARAMETER_EX_THREADS_DESC" xml:space="preserve">
+    <value>Number of additional threads to use</value>
+  </data>
 </root>
