--- a/11thLauncher/Properties/Resources.resx
+++ b/11thLauncher/Properties/Resources.resx
@@ -121,9 +121,6 @@
   <data name="A3SDS" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\lib\A3SDS.jar;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
-  <data name="_11thLauncherUpdater" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\lib\11thLauncherUpdater.exe;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
-  </data>
   <data name="icon" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\icon.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -132,5 +129,8 @@
   </data>
   <data name="a3sEnabled" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\a3sEnabled.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="_11thLauncher_Updater" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\lib\11thLauncher.Updater.exe;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
 </root>
