--- a/11thLauncher/Resources/Strings.es-ES.resx
+++ b/11thLauncher/Resources/Strings.es-ES.resx
@@ -699,4 +699,10 @@
   <data name="S_PROFILES" xml:space="preserve">
     <value>Perfiles</value>
   </data>
+  <data name="S_BTN_UAC_ENABLED_TIP" xml:space="preserve">
+    <value>El juego será lanzado con permisos de administrador</value>
+  </data>
+  <data name="S_BTN_UAC_DISABLED_TIP" xml:space="preserve">
+    <value>Ejecutando sin permisos de administrador. El juego puede fallar al iniciar</value>
+  </data>
 </root>
