--- a/11thLauncher/Resources/Strings.resx
+++ b/11thLauncher/Resources/Strings.resx
@@ -685,4 +685,10 @@
   <data name="S_BTN_UAC_DISABLED_TIP" xml:space="preserve">
     <value>Running without admin privileges. The game may fail to start</value>
   </data>
+  <data name="S_BTN_STEAM_ENABLED_TIP" xml:space="preserve">
+    <value>Steam is running</value>
+  </data>
+  <data name="S_BTN_STEAM_DISABLED_TIP" xml:space="preserve">
+    <value>Steam is not running. Steam is required to launch ArmA 3</value>
+  </data>
 </root>
