--- a/11thLauncher/Resources/Strings.resx
+++ b/11thLauncher/Resources/Strings.resx
@@ -683,9 +683,12 @@
     <value>Unable to launch game</value>
   </data>
   <data name="S_MSG_LAUNCH_ERROR_CONTENT_STEAM" xml:space="preserve">
-    <value>Steam has to be running to launch ArmA 3.</value>
+    <value>- Steam has to be running to launch ArmA 3.</value>
   </data>
   <data name="S_MSG_LAUNCH_ERROR_CONTENT_ELEVATION" xml:space="preserve">
-    <value>The launcher has to be run with admin privileges to start ArmA 3. </value>
+    <value>- The launcher has to be run with admin privileges to start ArmA 3.</value>
+  </data>
+  <data name="S_MSG_LAUNCH_ERROR_CONTENT_PATH" xml:space="preserve">
+    <value>- The ArmA 3 executable path is not defined.</value>
   </data>
 </root>
